Add View in Browser link

--- a/index.html
+++ b/index.html
@@ -486,6 +486,13 @@ line-height:1.2;
              </a>
             </h5>
            </td>
+           <td align="center" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust:100%;padding: 5pt;font-family: helvetica;" width="33%">
+            <h5>
+             <a href="https://aukitclub.github.io/" style="color: white;text-decoration: underline;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+              View in browser
+             </a>
+            </h5>
+           </td>
            <td align="right" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust:100%;padding: 5pt;font-family: helvetica;" width="33%">
             <h5>
              <a href="https://goo.gl/forms/dSJMCEKOXMxY0mei2/" style="color: white;text-decoration: none;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
