Add archive link

--- a/index.html
+++ b/index.html
@@ -487,9 +487,14 @@ line-height:1.2;
             </h5>
            </td>
            <td align="center" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust:100%;padding: 5pt;font-family: helvetica;" width="33%">
-            <h5>
+            <h5 width="50%">
              <a href="https://aukitclub.github.io/" style="color: white;text-decoration: underline;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
               View in browser
+             </a>
+            </h5>
+            <h5 width="50%">
+             <a style="color: white;text-decoration: underline;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+              Go to archives
              </a>
             </h5>
            </td>
