--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<bound method Tag.prettify of <html><head></head><body><bound <html="" method="" of="" tag.prettify=""><bound <html="" method="" of="" tag.prettify=""><bound <html="" method="" of="" tag.prettify=""><bound <html="" method="" of="" tag.prettify=""><bound <!doctype="" html="" method="" of="" tag.prettify="">
-
+ <!DOCTYPE HTML>
+ <html>
+ <head>
   <title>
    IT and Tech Club Newsletter
   </title>
   <meta content="0; archives/february_2019.html" http-equiv="refresh" id="link_page"/>
- 
-
-&gt;</bound>&gt;</bound>&gt;</bound>&gt;</bound>&gt;</bound></body></html>>
+</head>
+</html>
