Change the first month from Jan to Feb

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>
    IT and Tech Club Newsletter
   </title>
-  <meta content="0; archives/january_2019.html" http-equiv="refresh" id="link_page"/>
+  <meta content="0; archives/february_2019.html" http-equiv="refresh" id="link_page"/>
 </head>
-  
+
 </html>
